# aws-image-translate

./: .env.example  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  DEVELOPMENT.md  README.md  STORAGE_ADAPTER.md  TODO.md  buildspec.yml  check_aws.sh  check_aws_resources.sh  cleanup.py  config.py  configure_storage.py  deploy-frontend.sh  deploy.py  eslint.config.js  full_cleanup.py  gemini-task.md  generate_resource_manifest.py  get-lambda-logs.ps1  jest.config.js  lint.py  main.py  manage_reddit_gallery.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup-cognito.py  setup-env.ps1  setup-env.sh  sonar-project.properties
.github/prompts/: coverage.prompt.yml  dead-code.prompt.yml  docstrings.prompt.yml  documentation.prompt.yml  group-commits.yml  refactor-tests.prompt.yml
.github/workflows/: ci.yml
aws-demos/: README.md  aws_pipeline.py  detect-text.py  test_components.py  translate-text.py
aws-demos/pipeline/: __init__.py  detect_language.py  detect_text.py  translate_text.py
backend/: README.md  app.py
deployment_logic/: deployment_orchestrator.py  feature_handler.py  progress_indicator.py  python_detector.py  resource_naming.py  resource_tracker.py
frontend/: README.md  index.html
frontend/components/: confirmation-form.html  dashboard.html  file-upload.html  gallery.html  header.html  language-selection.html  login-form.html  performance-dashboard.html  profile.html  register-form.html  results.html  upload-list.html
frontend/css/: styles.css
frontend/js/: app.js  auth.js  component-loader.js  config.js.template  performance.js
frontend/js/components/: AuthComponent.js  BaseComponent.js  DashboardComponent.js  FileUploadComponent.js  FlipModalComponent.js  GalleryComponent.js  LanguageSelectionComponent.js  PerformanceDashboardComponent.js  ProfileComponent.js  ResultsComponent.js  UploadQueueComponent.js
frontend/js/constants/: languages.js
lambda/: cognito_triggers.py  image_processor.py
lambda_functions/: aws_clients.py  build_all.py  build_lambda.py  cognito_triggers.py  gallery_lister.py  history_handler.py  image_processor.py  mmid_populator.py  performance_handler.py  prepare_reddit_populator.py  reddit_config.py  reddit_populator_sync.py  reddit_realtime_scraper.py  reddit_scraper_sync.py  requirements.txt  user_manager.py
src/: README.md  amazon_dynamodb.py  amazon_rekognition.py  amazon_s3.py  amazon_translate.py  enhanced_media_utils.py  image_processor.py  reddit-aws-pipeline-docs.md  reddit_scraper.py  reddit_scrapper.py  storage_adapter.py
terraform/: LAMBDA_DEPLOYMENT.md  README.md  api.tf  cognito.tf  config.js.tpl  data.tf  deploy.ps1  deploy.sh  dynamodb.tf  frontend.tf  lambda.tf  locals.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
terraform/app-stack/: api.tf  codepipeline.tf  cognito.tf  config.js.tpl  data.tf  dynamodb.tf  env_to_tfvars.py  eventbridge.tf  frontend.tf  google-oauth.tf  lambda.tf  locals.tf  main.tf  oauth-automation.tf  outputs.tf  post_deploy_message.py  s3.tf  sync_frontend.py  update-google-oauth.py  user_reset.sh  variables.tf
terraform/data-stack/: backend.tf  dynamodb.tf  locals.tf  main.tf  outputs.tf  variables.tf
terraform/envs/dev/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/api/: main.tf  outputs.tf  variables.tf
terraform/modules/cognito/: README.md  lambda.tf  main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/frontend/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/frontend_hosting/: main.tf  variables.tf
terraform/modules/image_translation/: dynamodb.tf  lambda.tf  outputs.tf  s3.tf  s3_cors.tf  variables.tf
terraform/modules/lambda/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/s3/: README.md  cors.tf  main.tf  outputs.tf  variables.tf
terraform/modules/user_management/: lambda.tf  main.tf  outputs.tf  variables.tf
tests/: auth-integration.test.js  auth-performance.test.js  auth.test.js  performance-dashboard.test.js  setup.js  test-utils.js  test_amazon_dynamodb.py  test_amazon_rekognition.py  test_amazon_s3.py  test_amazon_translate.py  test_app.py  test_buildspec.py  test_configure_storage.py  test_configure_storage_cli.py  test_dependency_installation.py  test_deploy.py  test_deployment_orchestrator.py  test_enhanced_media_utils.py  test_feature_handler.py  test_history_handler.py  test_image_processor.py  test_lambda_build_validation.py  test_main.py  test_mmid_populator.py  test_progress_indicator.py  test_python_detector.py  test_reddit_scraper.py  test_resource_naming.py  test_setup_cognito.py  test_storage_adapter.py
