[project]
name = "aws-image-translate"
version = "1.0.0"
description = "AWS Image Translation Service"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Main dependencies (from requirements.txt)
dependencies = [
    "boto3",
    "praw",
    "requests",
    "python-dotenv",
    "beautifulsoup4",
    "aiohttp",
    "aiofiles",
    "asyncpraw",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
]

# Optional dependencies for development (from requirements-dev.txt)
[project.optional-dependencies]
# Google Cloud Storage for temporary storage backend switching
gcs = [
    "google-cloud-storage>=2.10.0",
]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "moto>=4.2.0",
    # Code formatting and linting
    "black>=23.0.0",
    "flake8>=6.0.0",
    "flake8-pyproject>=1.0.0",
    "isort>=5.12.0",
    # Type checking
    "mypy>=1.0.0",
    "types-requests>=2.0.0",
    "types-boto3>=1.0.0",
    "mypy-boto3-dynamodb>=1.0.0",
    "mypy-boto3-s3>=1.0.0",
    "mypy-boto3-rekognition>=1.0.0",
    "mypy-boto3-translate>=1.0.0",
    "mypy-boto3-comprehend>=1.0.0",
    # Additional development tools
    "pre-commit>=3.0.0",
    # Async support for testing
    "aioresponses>=0.7.0",
    "aiofiles>=23.0.0",
    "asyncpraw>=7.7.0",
    "types-aiofiles>=23.0.0",
    # Code analysis
    "pysonar>=0.1.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:botocore.*",
    "ignore::DeprecationWarning:boto3.*",
]
addopts = "-v --tb=short"
testpaths = ["tests"]

[tool.black]
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
# A list of directories to exclude from checks
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv", # Your specific exclusion
]

# A list of error codes to ignore
extend-ignore = ["E203", "E501", "F401"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = true
show_error_codes = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "botocore.*",
    "moto.*",
    "praw.*",
    "prawcore.*",
    "requests.*",
    "bs4.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.coverage.run]
omit = [
    "cleanup.py",
    "tests/*",
    ".venv/*",
    "venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.sonar]
projectKey = "ajbarea_aws-image-translate"
projectName = "AWS Image Translate"
projectVersion = "0.1.0"
