[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lenslate"
version = "0.1.0"
description = "Lenslate AWS/Terraform serverless application"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.md" }
authors = [
    { name = "Lenslate Contributors" }
]
dependencies = [
    # Add any runtime dependencies here, e.g.:
    # "boto3>=1.26",
]

[tool.setuptools]
packages = ["deployment_logic", "lambda_functions"]

[tool.pytest.ini_options]
pythonpath = [".", "lambda_functions", "deployment_logic"]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:datetime.datetime.utcnow.*:DeprecationWarning",
]
markers = [
    "integration: marks tests as integration tests (may be slow)",
    "buildspec: marks tests related to buildspec.yml functionality",
    "deployment: marks tests related to deployment processes",
    "slow: marks tests as slow running",
    "unit: marks tests as unit tests",
    "smoke: marks tests as smoke tests for basic functionality",
]

[project.optional-dependencies]
testing = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "moto[dynamodb,s3,lambda,iam,cognito,apigateway]>=4.2.0",
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "requests>=2.28.0",
    "responses>=0.23.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.flake8]
ignore = ["E501", "W503", "E203"]
exclude = ["node_modules", ".git", "__pycache__", "*.egg-info", "build", "dist"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
target-version = ['py38']
